# autosample

./: .gitignore  CMakeLists.txt  audio_common.cpp  audio_common.h  main.cpp  my_type.h  player.cpp  player.h  readme.md  recorder.cpp  recorder.h  recorder.hpp
cmake/: FindRtAudio.cmake  FindRtMidi.cmake
license/: rtmidi.txt
y2020_m11_d22_h13_m7_s26/: _sox.sh
